--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --color-dark-1: #1D2635;
+  --color-black: #07070D;
+  --color-dark-3: #798194;
+  --color-white-1: #F2F2F2;
+  --color-main: #308C8C;
+  --color-primary: #5EBFB5;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +19,78 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+/**Text */
+.uppercase {
+  text-transform: uppercase;
+}
+
+.fnt-bold {
+  font-weight: 800 !important;
+}
+
+
+/**Colors */
+.color-black {
+  color: var(--color-black)
+}
+
+.color-main {
+  color: var(--color-main)
+}
+
+.color-primary {
+  color: var(--color-primary)
+}
+
+.color-white-1 {
+  color: var(--color-white-1)
+}
+
+.color-dark-3 {
+  color: var(--color-dark-3)
+}
+
+/**Link */
+.mh-link {
+  font-size: 17px;
+  font-weight: 400;
+  font-family: 'Prompt', sans-serif;
+  text-decoration: none;
+}
+
+.mh-link-2 {
+  text-decoration: none;
+  text-transform: uppercase; 
+  font-weight: 800;
+}
+
+.mh-link-3 {
+  text-decoration: none;
+  font-weight: 400;
+}
+
+/**Background */
+.bg-dark-1 {
+  background: var(--color-dark-1);
+}
+
+/* Gradiant */
+.bg-linear-tp-1 {
+  background: linear-gradient(73deg, rgba(48,140,140,1) 0%, rgba(94,191,181,1) 100%);
+}
+
+/** Shadow */
+.shadow-type-1 {
+  box-shadow: -10px 0px 35px -15px rgba(0,0,0,0.65);
+}
+
+/**Flex */
+.flex-col-center {
+  display: flex;
+  justify-content: center;
+  align-items : center;
+  flex-direction: column !important;
 }
