--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,15 @@ code {
     monospace;
 }
 
+/**Text */
+.text-center {
+  text-align: center;
+}
+
+/**Size */
+.w-100 {
+  width: 100%;
+}
 
 /**Text */
 .uppercase {
@@ -103,4 +112,11 @@ code {
   justify-content: center;
   align-items : center;
   flex-direction: column !important;
+}
+
+.flex-row-center {
+  display: flex;
+  justify-content: center;
+  align-items : center;
+  flex-direction: row !important;
 }
