--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color-main: #308C8C;
   --color-primary: #5EBFB5;
   --color-error: #D91EBA;
+  --color-o80-dark-2: rgba(7, 7, 13, .8);
 }
 
 body {
@@ -33,6 +34,17 @@ code {
   width: 100%;
 }
 
+.hv-100 {
+  height: 100vh !important;
+}
+
+/**Position */
+.container-absolute-up {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /**Text */
 .uppercase {
   text-transform: uppercase;
@@ -41,7 +53,6 @@ code {
 .fnt-bold {
   font-weight: 800 !important;
 }
-
 
 /**Colors */
 .color-black {
@@ -98,6 +109,10 @@ code {
   background: var(--color-dark-1);
 }
 
+.bg-color-o80-dark-2 {
+  background: var(--color-o80-dark-2);
+}
+
 /* Gradiant */
 .bg-linear-tp-1 {
   background: linear-gradient(73deg, rgba(48,140,140,1) 0%, rgba(94,191,181,1) 100%);
@@ -136,3 +151,4 @@ code {
   align-items : space-between;
   flex-direction: column !important;
 }
+
