--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-dark-3: #798194;
   --color-white-1: #F2F2F2;
   --color-white-2: #C9C9C9;
+  --color-white-3: #A3A3A3;
   --color-main: #308C8C;
   --color-primary: #5EBFB5;
   --color-error: #D91EBA;
@@ -79,6 +80,10 @@ code {
   color: var(--color-white-2)
 }
 
+.color-white-3 {
+  color: var(--color-white-3)
+}
+
 .color-dark-3 {
   color: var(--color-dark-3)
 }
@@ -112,6 +117,15 @@ code {
 .bg-color-o80-dark-2 {
   background: var(--color-o80-dark-2);
 }
+
+.bg-color-black {
+  background-color: var(--color-black) !important;
+}
+
+.bg-main {
+  background: var(--color-main);
+}
+
 
 /* Gradiant */
 .bg-linear-tp-1 {
@@ -152,3 +166,29 @@ code {
   flex-direction: column !important;
 }
 
+/**FONTS */
+.item-list-menu, .item-list-menu>* {
+  font-size: 17px !important;
+  font-weight: 500 !important;
+  font-family: 'Poppins', sans-serif !important;
+  text-transform: capitalize;
+  letter-spacing: 1px !important;
+}
+
+/**Size */
+.height-100 {
+  height: 100%;
+}
+
+/**Extas */
+.pointer {
+  cursor: pointer;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+/**Animations */
+@keyframes showUp {
+  0%   {bottom: 0}
+  100% {bottom: 50%;}
+}
