--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 :root {
+  --color-darker-1: #0D0D0D;
+  --color-darker-2: #141414;
+
   --color-dark-1: #1D2635;
+  --color-dark-2: #3A4253;
   --color-black: #07070D;
   --color-dark-3: #798194;
   --color-white-1: #F2F2F2;
@@ -60,6 +64,10 @@ code {
   color: var(--color-black)
 }
 
+.color-darker-1 {
+  color: var(--color-darker-1)
+}
+
 .color-error {
   color: var(--color-error)
 }
@@ -67,9 +75,17 @@ code {
 .color-main {
   color: var(--color-main)
 }
+.color-main-important {
+  color: var(--color-main) !important;
+}
+
 
 .color-primary {
   color: var(--color-primary)
+}
+
+.color-primary-important {
+  color: var(--color-primary) !important;
 }
 
 .color-white-1 {
@@ -111,7 +127,11 @@ code {
 
 /**Background */
 .bg-dark-1 {
-  background: var(--color-dark-1);
+  background: var(--color-dark-1) !important;
+}
+
+.bg-dark-2 {
+  background: var(--color-dark-2) !important;
 }
 
 .bg-color-o80-dark-2 {
@@ -126,6 +146,13 @@ code {
   background: var(--color-main);
 }
 
+.bg-darker-1 {
+  background: var(--color-darker-1) !important;
+}
+
+.bg-darker-2 {
+  background: var(--color-darker-2) !important;
+}
 
 /* Gradiant */
 .bg-linear-tp-1 {
@@ -154,7 +181,7 @@ code {
 
 .flex-row-between {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items : center;
   flex-direction: row !important;
 }
@@ -186,6 +213,12 @@ code {
 }
 .capitalize {
   text-transform: capitalize;
+}
+.limit-character {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 /**Animations */
 @keyframes showUp {
